[gd_scene load_steps=32 format=3 uid="uid://byeqj6jd7r2vl"]

[ext_resource type="Script" path="res://scripts/MenuPrincipal.gd" id="1_xdxr6"]
[ext_resource type="Texture2D" uid="uid://uo6y72gka3i6" path="res://texturas/menus/Mesa_Oscura.png" id="2_2wova"]
[ext_resource type="Texture2D" uid="uid://du0j2ib4uoe6b" path="res://texturas/menus/Libro_para_Victoria_y_derrota.png" id="2_7wfuc"]
[ext_resource type="PackedScene" uid="uid://c3dvk21fhqeoi" path="res://escenas/panel_menu.tscn" id="2_rx15a"]
[ext_resource type="Texture2D" uid="uid://dpapmirwd714k" path="res://texturas/menus/boton_creditos.png" id="3_530hg"]
[ext_resource type="Texture2D" uid="uid://b332yv2t8kynt" path="res://texturas/menus/libro_cerrado.png" id="5_ic5la"]
[ext_resource type="Texture2D" uid="uid://ds8j1l4sv3678" path="res://texturas/menus/Borde_Ilustraciones_Libro.png" id="5_ma7rj"]
[ext_resource type="Texture2D" uid="uid://cgrucv55xpoo3" path="res://texturas/menus/Menu_Inicio_Ilustracion.png" id="6_xlrri"]
[ext_resource type="Texture2D" uid="uid://d5m6ymst3es7" path="res://texturas/menus/Victoria_Libro.png" id="8_05w7k"]
[ext_resource type="Texture2D" uid="uid://cr5qcqw6tj6aw" path="res://texturas/menus/Derrota_Libro.png" id="9_86xqj"]
[ext_resource type="Texture2D" uid="uid://dtkhu4jup0q2u" path="res://texturas/Dorso_Azul.png" id="10_8eiqc"]
[ext_resource type="Texture2D" uid="uid://cn3c3uw325306" path="res://texturas/Dorso_Rojo.png" id="11_n3wqh"]
[ext_resource type="PackedScene" uid="uid://cu4ruf7b0vci4" path="res://escenas/medidor_locura.tscn" id="12_nd3xq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gt4ad"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oms4q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qebxr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ewe8s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8123l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c4df0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8rvck"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5igvk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jcm7g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ux34v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3q2n1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2t631"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rmpmb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mqjlx"]

[sub_resource type="LabelSettings" id="LabelSettings_nye3j"]
font_size = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_347wb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5bd0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a5c2x"]

[node name="MenuPrincipal" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = 47.0
offset_right = -27.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_gt4ad")
script = ExtResource("1_xdxr6")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = -320.0
offset_right = 584.0
offset_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2wova")
expand_mode = 1

[node name="LibroAbierto" type="Panel" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -283.0
offset_right = 441.0
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_oms4q")

[node name="TextureLibro" type="TextureRect" parent="LibroAbierto"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -415.5
offset_top = -299.0
offset_right = 415.5
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7wfuc")
expand_mode = 1

[node name="PaginaInicio" type="Panel" parent="LibroAbierto"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.0
offset_top = -287.5
offset_right = 513.0
offset_bottom = 287.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qebxr")

[node name="Play" type="Button" parent="LibroAbierto/PaginaInicio"]
z_index = 3
layout_mode = 0
offset_left = 202.5
offset_top = 167.5
offset_right = 367.5
offset_bottom = 232.5
text = "JUGAR"

[node name="Settings" type="Button" parent="LibroAbierto/PaginaInicio"]
layout_mode = 0
offset_left = 204.5
offset_top = 234.5
offset_right = 369.5
offset_bottom = 298.5
theme_override_styles/normal = SubResource("StyleBoxEmpty_ewe8s")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8123l")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_c4df0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8rvck")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5igvk")
text = "SETTINGS"
expand_icon = true

[node name="Credits" type="Button" parent="LibroAbierto/PaginaInicio"]
z_index = 3
layout_mode = 0
offset_left = 202.5
offset_top = 282.5
offset_right = 372.5
offset_bottom = 358.5
theme_override_styles/normal = SubResource("StyleBoxEmpty_jcm7g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ux34v")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3q2n1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2t631")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rmpmb")
text = "
"
icon = ExtResource("3_530hg")
expand_icon = true

[node name="Exit" type="Button" parent="LibroAbierto/PaginaInicio"]
z_index = 3
layout_mode = 0
offset_left = 202.5
offset_top = 370.5
offset_right = 367.5
offset_bottom = 435.5
text = "SALIR :("

[node name="BordeIlustracion3" type="TextureRect" parent="LibroAbierto/PaginaInicio"]
z_index = -1
layout_mode = 0
offset_left = 528.5
offset_top = 47.5
offset_right = 873.5
offset_bottom = 535.5
texture = ExtResource("5_ma7rj")
expand_mode = 1

[node name="IlustracionInicio" type="TextureRect" parent="LibroAbierto/PaginaInicio/BordeIlustracion3"]
layout_mode = 0
offset_left = 29.0
offset_top = 24.0
offset_right = 318.0
offset_bottom = 461.0
texture = ExtResource("6_xlrri")
expand_mode = 1

[node name="Settings" parent="LibroAbierto" instance=ExtResource("2_rx15a")]
visible = false
layout_mode = 0
offset_left = 460.0
offset_top = 55.0
offset_right = 866.0
offset_bottom = 581.0

[node name="Titulo" parent="LibroAbierto/Settings" index="0"]
text = "AJUSTES"

[node name="VolumenMusica" type="HSlider" parent="LibroAbierto/Settings"]
layout_mode = 0
offset_left = 74.0
offset_top = 135.0
offset_right = 330.0
offset_bottom = 151.0

[node name="Label" type="Label" parent="LibroAbierto/Settings/VolumenMusica"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -32.0
offset_right = 64.0
offset_bottom = -9.0
grow_horizontal = 2
text = "Volumen MÃºsica"
horizontal_alignment = 1

[node name="MuteMusica" type="CheckButton" parent="LibroAbierto/Settings/VolumenMusica"]
layout_mode = 0
offset_left = 216.0
offset_top = 24.0
offset_right = 260.0
offset_bottom = 48.0

[node name="Label2" type="Label" parent="LibroAbierto/Settings/VolumenMusica"]
layout_mode = 0
offset_left = 168.0
offset_top = 24.0
offset_right = 209.0
offset_bottom = 47.0
text = "Mute"

[node name="VolumenSFX" type="HSlider" parent="LibroAbierto/Settings"]
layout_mode = 0
offset_left = 74.0
offset_top = 247.0
offset_right = 330.0
offset_bottom = 263.0

[node name="Label" type="Label" parent="LibroAbierto/Settings/VolumenSFX"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -32.0
offset_right = 64.0
offset_bottom = -9.0
grow_horizontal = 2
text = "Volumen SFX
"
horizontal_alignment = 1

[node name="MuteSFX" type="CheckButton" parent="LibroAbierto/Settings/VolumenSFX"]
layout_mode = 0
offset_left = 216.0
offset_top = 24.0
offset_right = 260.0
offset_bottom = 48.0

[node name="Label2" type="Label" parent="LibroAbierto/Settings/VolumenSFX"]
layout_mode = 0
offset_left = 168.0
offset_top = 24.0
offset_right = 209.0
offset_bottom = 47.0
text = "Mute"

[node name="Home" type="Button" parent="LibroAbierto/Settings"]
layout_mode = 0
offset_left = -492.0
offset_top = 25.0
offset_right = -404.0
offset_bottom = 89.0
text = "/--\\
|__|"

[node name="Final" parent="LibroAbierto" instance=ExtResource("2_rx15a")]
visible = false
layout_mode = 0
offset_left = 459.0
offset_top = 50.0
offset_right = 918.0
offset_bottom = 569.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_mqjlx")

[node name="Titulo" parent="LibroAbierto/Final" index="0"]
offset_left = -405.0
offset_top = 26.0
offset_right = -1.0
offset_bottom = 94.0
text = "ME CAGO EN EL MISTERIO"

[node name="Score" type="Label" parent="LibroAbierto/Final"]
layout_mode = 0
offset_left = -420.0
offset_top = 366.0
offset_right = -16.0
offset_bottom = 434.0
label_settings = SubResource("LabelSettings_nye3j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Victoria" type="Label" parent="LibroAbierto/Final"]
visible = false
layout_mode = 0
offset_left = -415.0
offset_top = 393.0
offset_right = -11.0
offset_bottom = 461.0
text = "Victoria"
label_settings = SubResource("LabelSettings_nye3j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BordeIlustracion2" type="TextureRect" parent="LibroAbierto/Final/Victoria"]
z_index = -1
layout_mode = 0
offset_left = 423.0
offset_top = -400.0
offset_right = 768.0
offset_bottom = 88.0
texture = ExtResource("5_ma7rj")
expand_mode = 1

[node name="IlustracionInicio" type="TextureRect" parent="LibroAbierto/Final/Victoria/BordeIlustracion2"]
layout_mode = 0
offset_left = 29.0
offset_top = 24.0
offset_right = 318.0
offset_bottom = 461.0
texture = ExtResource("8_05w7k")
expand_mode = 1

[node name="Derrota" type="Label" parent="LibroAbierto/Final"]
visible = false
layout_mode = 0
offset_left = -415.0
offset_top = 390.0
offset_right = -11.0
offset_bottom = 458.0
text = "Derrota"
label_settings = SubResource("LabelSettings_nye3j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BordeIlustracion3" type="TextureRect" parent="LibroAbierto/Final/Derrota"]
z_index = -1
layout_mode = 0
offset_left = 423.0
offset_top = -397.0
offset_right = 768.0
offset_bottom = 91.0
texture = ExtResource("5_ma7rj")
expand_mode = 1

[node name="IlustracionInicio" type="TextureRect" parent="LibroAbierto/Final/Derrota/BordeIlustracion3"]
layout_mode = 0
offset_left = 29.0
offset_top = 24.0
offset_right = 318.0
offset_bottom = 461.0
texture = ExtResource("9_86xqj")
expand_mode = 1

[node name="Historia" type="Label" parent="LibroAbierto/Final"]
visible = false
layout_mode = 0
offset_left = 75.0
offset_top = 109.0
offset_right = 257.0
offset_bottom = 132.0
text = "Historia"

[node name="TextoHistoria" type="RichTextLabel" parent="LibroAbierto/Final/Historia"]
layout_mode = 0
offset_left = 1.0
offset_top = 30.0
offset_right = 309.0
offset_bottom = 307.0

[node name="Home2" type="Button" parent="LibroAbierto/Final"]
layout_mode = 0
offset_left = -491.0
offset_top = 30.0
offset_right = -403.0
offset_bottom = 94.0
text = "/--\\
|__|"

[node name="tutorial" type="Panel" parent="LibroAbierto"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.5
offset_top = -283.0
offset_right = 229.5
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_347wb")

[node name="IntroducciÃ³nDelJuego" type="Label" parent="LibroAbierto/tutorial"]
offset_left = -152.0
offset_top = 97.0
offset_right = 37.0
offset_bottom = 125.0
text = "Intro del juego:"

[node name="parrafo" type="RichTextLabel" parent="LibroAbierto/tutorial/IntroducciÃ³nDelJuego"]
layout_mode = 0
offset_left = 1.0
offset_top = 28.0
offset_right = 311.0
offset_bottom = 155.0
text = "Bienvenido a la poblaciÃ³n XXXX gobernada por el principe Adetokumbo, tu objetivo es derrocarle sembrando la locura entre sus habitantes"

[node name="ComoJugar" type="Label" parent="LibroAbierto/tutorial"]
offset_left = -152.0
offset_top = 262.0
offset_right = 37.0
offset_bottom = 290.0
text = "Como jugar:"

[node name="parrafo" type="RichTextLabel" parent="LibroAbierto/tutorial/ComoJugar"]
layout_mode = 0
offset_top = 35.0
offset_right = 215.0
offset_bottom = 244.0
text = "Tienes 6 turnos para conseguir adeptos a tu revoluciÃ³n, en cada turno realizarÃ¡s 2 acciones para sembrar la locura y el pÃ¡nico.El prÃ­ncipe y su consejo tomarÃ¡n 2 acciones para calmar a la turba
"

[node name="IlustracionInicio2" type="TextureRect" parent="LibroAbierto/tutorial/ComoJugar"]
offset_left = 224.0
offset_top = 114.0
offset_right = 320.0
offset_bottom = 233.0
texture = ExtResource("10_8eiqc")
expand_mode = 1

[node name="IlustracionInicio" type="TextureRect" parent="LibroAbierto/tutorial/ComoJugar"]
offset_left = 222.0
offset_top = -13.0
offset_right = 318.0
offset_bottom = 106.0
texture = ExtResource("11_n3wqh")
expand_mode = 1

[node name="ObjetivoJuego" type="Label" parent="LibroAbierto/tutorial"]
offset_left = 244.0
offset_top = 90.0
offset_right = 433.0
offset_bottom = 118.0
text = "Objetivo del juego:
"

[node name="parrafo" type="RichTextLabel" parent="LibroAbierto/tutorial/ObjetivoJuego"]
layout_mode = 0
offset_left = -5.0
offset_top = 32.0
offset_right = 211.0
offset_bottom = 434.0
text = "Juega bien tus cartas para conseguir 100 adeptos a la revoluciÃ³n para ganar la partida, iras viendo los adeptos en el medidor lateral."

[node name="medidor_locura" parent="LibroAbierto/tutorial/ObjetivoJuego" instance=ExtResource("12_nd3xq")]
offset_left = 221.0
offset_top = -215.0
offset_right = 413.0
offset_bottom = 849.0
scale = Vector2(0.458087, 0.458087)
script = null

[node name="medidor" parent="LibroAbierto/tutorial/ObjetivoJuego/medidor_locura" index="0"]
value = 50.0

[node name="start_game" type="Button" parent="LibroAbierto/tutorial"]
layout_mode = 0
offset_left = 250.0
offset_top = 373.0
offset_right = 526.0
offset_bottom = 432.0
text = "Presiona para comenzar"

[node name="Credits" parent="LibroAbierto" instance=ExtResource("2_rx15a")]
visible = false
layout_mode = 0
offset_left = 452.0
offset_top = 47.0
offset_right = 911.0
offset_bottom = 550.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_i5bd0")

[node name="Titulo" parent="LibroAbierto/Credits" index="0"]
offset_left = 31.0
offset_top = 20.0
offset_right = 435.0
offset_bottom = 88.0
text = "CRÃDITOS"

[node name="SeccionArte" type="Label" parent="LibroAbierto/Credits"]
layout_mode = 0
offset_left = 51.0
offset_top = 85.0
offset_right = 240.0
offset_bottom = 113.0
text = "ARTE"

[node name="TextoArte" type="RichTextLabel" parent="LibroAbierto/Credits/SeccionArte"]
layout_mode = 0
offset_left = 1.0
offset_top = 28.0
offset_right = 352.0
offset_bottom = 118.0
text = "Juan
Nubi"

[node name="SeccionProgramacion" type="Label" parent="LibroAbierto/Credits"]
layout_mode = 0
offset_left = 50.0
offset_top = 211.0
offset_right = 239.0
offset_bottom = 239.0
text = "PROGRAMACIÃN"

[node name="TextoProgramacion" type="RichTextLabel" parent="LibroAbierto/Credits/SeccionProgramacion"]
layout_mode = 0
offset_left = 2.0
offset_top = 36.0
offset_right = 353.0
offset_bottom = 145.0
text = "DarÃ­o
Alejandro
Bea
"

[node name="SeccionSonido" type="Label" parent="LibroAbierto/Credits"]
layout_mode = 0
offset_left = 53.0
offset_top = 369.0
offset_right = 242.0
offset_bottom = 397.0
text = "SONIDO
"

[node name="TextoSonido" type="RichTextLabel" parent="LibroAbierto/Credits/SeccionSonido"]
layout_mode = 0
offset_left = -1.0
offset_top = 31.0
offset_right = 350.0
offset_bottom = 121.0

[node name="Home3" type="Button" parent="LibroAbierto/Credits"]
layout_mode = 0
offset_left = -484.0
offset_top = 33.0
offset_right = -396.0
offset_bottom = 97.0
text = "/--\\
|__|"

[node name="LibroCerrado" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -283.0
offset_right = 219.0
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_a5c2x")

[node name="Fondo" type="TextureRect" parent="LibroCerrado"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -305.0
offset_right = 1137.0
offset_bottom = 1495.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
texture = ExtResource("5_ic5la")

[node name="TituloJuego" type="TextureButton" parent="LibroCerrado"]
z_index = 1
layout_mode = 0
offset_left = 37.0
offset_top = 9.0
offset_right = 408.0
offset_bottom = 548.0

[connection signal="pressed" from="LibroAbierto/PaginaInicio/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="LibroAbierto/PaginaInicio/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="LibroAbierto/PaginaInicio/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="LibroAbierto/PaginaInicio/Exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="LibroAbierto/Settings/VolumenMusica" to="." method="_on_volumen_musica_value_changed"]
[connection signal="pressed" from="LibroAbierto/Settings/VolumenMusica/MuteMusica" to="." method="_on_mute_musica_pressed"]
[connection signal="value_changed" from="LibroAbierto/Settings/VolumenSFX" to="." method="_on_volumen_sfx_value_changed"]
[connection signal="pressed" from="LibroAbierto/Settings/VolumenSFX/MuteSFX" to="." method="_on_mute_sfx_pressed"]
[connection signal="pressed" from="LibroAbierto/Settings/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="LibroAbierto/Final/Home2" to="." method="_on_home_pressed"]
[connection signal="pressed" from="LibroAbierto/tutorial/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="LibroAbierto/Credits/Home3" to="." method="_on_home_pressed"]
[connection signal="pressed" from="LibroCerrado/TituloJuego" to="." method="_on_titulo_juego_pressed"]

[editable path="LibroAbierto/Settings"]
[editable path="LibroAbierto/Final"]
[editable path="LibroAbierto/tutorial/ObjetivoJuego/medidor_locura"]
[editable path="LibroAbierto/Credits"]
